--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-autopep8 = "*"
 mysql-connector-python = "*"
 
 [packages]
+autopep8 = "*"
+pylint = "*"
 
 [requires]
 python_version = "3.8"
