--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/Create/.local/share/virtualenvs/studentdb_app-L7_c8gMC/bin/python"
+    "python.pythonPath": "/Users/Create/.local/share/virtualenvs/studentdb_app-L7_c8gMC/bin/python",
+    "python.formatting.provider": "autopep8"
 }
